--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href='interface.css'></style>
-  <link href="https://fonts.googleapis.com/css?family=Kurale" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Kurale" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Anton|Cabin|Cairo|Inconsolata" rel="stylesheet">
   </head>
   <body onload='load()'>
     <div id='canvases'> 
@@ -18,19 +19,40 @@
         </div>
     </div>
     <div id='warnMsg'></div>
-    
-    
-    <div id='help' style='display:none'>
+    <div id='Title'>Geocentric Survival</div>
+    <div id='mute' onclick='mute()'>Mute</div>
+    <div id='pause' onclick='pauseGame()'>Pause</div>
+    <div id='help' class='panel' style='display:none'>
       Keep the Earth alive as long as possible! 
     </br> Use Your mouse to rotate the Sun around the Earth (or Earth around the Sun). Every time You make a (clockwise) Rotation, one day passes and You will gain some Energy. 
     </br> Don't go too close to the sun or the Earth will burn!
     </br> But don't let it get too far away or humanity will freeze!
     </br> Also don't let the earth get hit by the meteors! Use the sun instead to burn them all down!
+    </br> You can click to transfer some Energy into HP if You're running low!
     </br> Have Fun!
+    <div class='but' onclick='$(this).parent().hide()'>Back</div>
+    </div>
+
+    <div id='about'  class='panel' style='display:none'>
+      This game was made as part of the Ludum Dare 39 Compo.
+    </br>Everything was made by Benjamin Welge during the weekend of the competition although I did use some javascript snippets from previous projects (Mainly for collision and some of the effects like the lightning).
+    </br> It was my first time participating and also the first time I tried my hand at creating Music/sounds for a game. The three .wav's were made using Beepbox.co, and I vehemently apologize for the annoyingness of the main sound. I really hope the Mute button works in all Browsers ;-)
+</br>
+    Would appreciate any feedback, criticism or comments You might have!</br>
+    Have Fun!
+    <div class='but' onclick='$(this).parent().hide()'>Back</div>
     </div>
 
     <script src="jquery-1.9.0.js"></script>
     <script src="main.js"></script>
+
+    <audio>
+      <source src="bgSoundLoop.wav" type="audio/wav">
+      <!-- <source src="horse.mp3" type="audio/mpeg"> -->
+    Your browser does not support the audio element.
+    </audio>
+
+
   
   </body>
 </html>
